Added 1st test case

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-base_url = https://www.stxnext.com
+#base_url = http://tsplb01502101.jdadelivers.com:7001/jda/shell/home
+base_url - http://azenpdactdb023.dev.corp.local:7011/jda/shell/
