--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "stx-blog"
+name = "autobot"
 version = "0.1.0"
 authors = ["david carvalho"]
 description = ""
@@ -7,13 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pytest = "^8.1.1"
-pytest-playwright = "^0.4.3"
-pytest-base-url = "^2.0.0"
+pytest = "^8.2.1"
+pytest-playwright = "^0.5.0"
+pytest-base-url = "^2.1.0"
 pre-commit = "^3.5.0"
-pytest-xdist = "^3.2.0"
-playwright = "^1.39.0"
-allure-pytest = "^2.13.5"
+pytest-xdist = "^3.6.1"
+playwright = "^1.44.0"
 pytest-html = "^4.1.1"
 
 
