Fixed issues in tests and removed deprecated tests and libraries

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
-#base_url = http://tsplb01502101.jdadelivers.com:7001/jda/shell/home
-base_url - http://azenpdactdb023.dev.corp.local:7011/jda/shell/
+base_url = https://stxnext.com/blog
+addopts = --strict-markers --headed
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    serial
