--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pytest = "^8.2.1"
+pytest = "^8.2.2"
 pytest-playwright = "^0.5.0"
 pytest-base-url = "^2.1.0"
 pre-commit = "^3.5.0"
@@ -19,3 +19,5 @@ pytest-html = "^4.1.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
